--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <!-- Entrepreunership card -->
     <div class="card-white" id="fashion">
       <h2 class="text-center">Entrepreunership</h2>
-      <p class="text-center">I always wanted to be an entrepreneur and i craeted two "sutructures". One dark Kitchen and one company that makes website for professionals. And I would like to create more businesses.</p>
+      <p class="text-center">I always wanted to be an entrepreneur and i created two "sutructures". One dark Kitchen and one company that makes website for professionals. And I would like to create more businesses.</p>
     </div>
     
     <!-- Future Project Card -->
     <div class="card-white" id="future">
       <h2 class="text-center">Future Project</h2>
-    <p class="text-center">For my future i want ti find a job in a company after my studies, while creating and thnking about other businesses. I want to gain experience at the beginning with some internship and first job.</p>
+    <p class="text-center">For my future i want to find a job in a company after my studies, while creating and thinking about other businesses. I want to gain experience at the beginning with some internship and first job.</p>
     </div>
     
     <!-- Footer Card -->
