--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hobbies Card -->
     <div class="card-white" id="hobbies">
       <h2 class="text-center">Hobbies</h2>
-      <p class="text-center">I love aviation since i'm very young, i had my licence one yer ago. About travelling i always loved disciver new countries and discover new cultures. And cook makes me active and inspired to create new meals for myself and to share with others.</p>
+      <p class="text-center">I love aviation since i'm very young, i had my licence one yer ago. About travelling i always loved discover new countries and new cultures. And cook makes me active and inspired to create new meals for myself and to share with others.</p>
     </div>
     
     <!-- Entrepreunership card -->
